<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_left_20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@drawable/reg_icon"
            android:src="@drawable/reg_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"               
            android:background="@color/white" >

                <EditText
                    android:id="@+id/userEditText"
                    style="@style/commom_text_field1"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:hint="@string/hint_username" >
                </EditText>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="6dp"
                    android:layout_height="1dp"
                    android:background="@drawable/underline" />

                <EditText
                    android:id="@+id/pwdEditText"
                    style="@style/commom_text_field1"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="6dp"
                    android:layout_height="1dp"
                    android:background="@drawable/underline" />
                
                <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_normal_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_middle" />       
            </LinearLayout>        
    </LinearLayout>
</ScrollView>