<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_left_20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/reg_icon" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            app:divider="@drawable/login_underline"
            app:showDividers="middle">

            <EditText
                android:id="@+id/userEditText"
                style="@style/commom_text_field1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_phone" />

            <EditText
                android:id="@+id/pwdEditText"
                style="@style/commom_text_field1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_normal_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_middle" />

        </android.support.v7.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/rl_thirdpart_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_view_margin_top">

            <ImageButton
                android:id="@+id/qq_auth"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/image_button_selector"
                android:scaleType="centerInside"
                android:src="@drawable/qq_login"
                android:text="" />

            <ImageButton
                android:id="@+id/sina_auth"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:background="@drawable/image_button_selector"
                android:scaleType="centerInside"
                android:src="@drawable/weibo_login"
                android:text="" />

            <ImageButton
                android:id="@+id/wechat_auth"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/image_button_selector"
                android:scaleType="centerInside"
                android:src="@drawable/wechat_login"
                android:text="" />

            <ImageButton
                android:id="@+id/hubei_auth"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/image_button_selector"
                android:scaleType="centerInside"
                android:src="@drawable/hubei_login"
                android:text="" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_left_20dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp">

            <TextView
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/image_button_selector"
                android:text="@string/regist"
                android:textColor="@color/blues" />

            <TextView
                android:id="@+id/tv_find_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:background="@drawable/image_button_selector"
                android:text="@string/find_pass"
                android:textColor="@color/blues" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>